# jude-web.rs

./: .gitignore  Cargo.toml  cargo-run.sh  shell.nix
src/: lib.rs  main.rs  templates.rs
src/handler/: foo.rs  index.rs  mod.rs
src/lib/: mod.rs  templates.rs
src/lib/middlewares/: session.rs
src/lib/middlewares/session/: mod.rs  session_wrapper.rs
src/middleware/: mod.rs
src/middleware/session/: internal.rs  mod.rs
src/templates/: mod.rs
templates/: index.html.mst  index.mst
