[package]
name = "jude-web"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.bio>"]

[dependencies]
deuterium = "*"
env_logger = "*"
iron = "*"
lazy_static = "*"
log = "*"
mustache = "*"
router = "*"
rustc-serialize = "*"
json_macros = "*"

[dependencies.logger]
git = "https://github.com/iron/logger.git"
